src/test/ui/issue-30438-c.nll.stderr
error[E0597]: `x` does not live long enough
  --> $DIR/issue-30438-c.rs:19:5
   |
LL |     &x
   |     ^^ borrowed value does not live long enough
LL |     //~^ ERROR: `x` does not live long enough
LL | }
   | - `x` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'y as defined on the function body at 17:10...
  --> $DIR/issue-30438-c.rs:17:10
   |
LL | fn silly<'y, 'z>(_s: &'y Test<'z>) -> &'y <Test<'z> as Trait>::Out where 'z: 'static {
   |          ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
